use jdk apis directly and not require lang3-api as one more dep